# llm-evaluation-console

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
src/llm_evaluation_console/: __init__.py  app.py  client.py  metrics.py
tests/: test_app.py  test_client.py
