[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-evaluation-console"
version = "0.1.0"
description = "Streamlit console for the LLM evaluation service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "plotly>=5.24.0",
  "streamlit>=1.41.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_evaluation_console"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
